<menu xmlns:android="http://schemas.android.com/apk/res/android">
<!--     <item android:id="@+id/menu_search" -->
<!--           android:title="@string/menu_search" -->
<!--           android:icon="@drawable/ic_action_search" -->
<!--           android:showAsAction="ifRoom|collapseActionView" -->
<!--           android:actionViewClass="android.widget.SearchView" /> -->

<item android:id="@+id/action_websearch"
          android:icon="@drawable/action_search"
          android:title="@string/action_websearch"
          android:showAsAction="ifRoom|withText" />
    
    <item android:id="@+id/menu_refresh"
        android:title="@string/menu_refresh"
        android:orderInCategory="100"
        android:showAsAction="ifRoom|collapseActionView"
        android:icon="@drawable/ic_refresh" />
    
    <item android:id="@+id/menu_settings"
        android:title="@string/menu_settings"
        android:orderInCategory="100"
        android:showAsAction="ifRoom"
        android:icon="@drawable/ic_settings" />
    
</menu>
