<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    android:padding="5dp" xmlns:android="http://schemas.android.com/apk/res/android">

   <GridLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:layout_marginBottom="5dp"
       android:background="@drawable/backgroud_rectangle"
       android:columnCount="3"
       android:orientation="vertical"
       android:padding="5dp" >

            <TextView
                android:id="@+id/tvLocation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="3dp"
                android:text="@string/default_location"
                android:textColor="@color/blue_gray"
                android:textSize="12sp"
                android:textStyle="italic"
                android:layout_row="0"
                android:layout_column="0"
                android:layout_columnSpan="2"
                android:typeface="monospace" />

            <LinearLayout 
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_row="0"
                android:layout_column="2"
                android:layout_gravity="right">

                <ProgressBar
                    android:id="@+id/pbWDload"
                    style="?android:attr/progressBarStyleSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:visibility="gone" />
                
                <TextView
                android:id="@+id/tvCurrentTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:padding="3dp"
                android:text="@string/default_current_time"
                android:textColor="@color/blue_gray"
                android:textSize="12sp"
                android:textStyle="italic"
                android:typeface="monospace" />
                
            </LinearLayout>
            

        


            
<!--             <TextView
                android:id="@+id/tvCurrWeatherConditionDesc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="false"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="false"
                android:layout_toRightOf="@id/llCurrTemp"
                android:padding="3dp"
                android:text="Mostly Sunny"
                android:textColor="@android:color/holo_orange_light" /> -->


                <ImageView
                    android:id="@+id/ivCurrentWeatherIcon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                android:layout_row="1"
                android:layout_column="0"
                    android:contentDescription="@string/default_weather_icon_desc"
                    
                    android:src="@drawable/no_weather" />

        <TextView
                    android:id="@+id/tvCurrentTemp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right|center_vertical"
                    android:layout_row="1"
                    android:layout_column="1"
                    android:padding="5dp"
                    android:text="@string/default_max_temp"
                    android:textColor="@android:color/holo_red_dark"
                    android:textSize="72sp"
                    android:textStyle="bold"
                    android:typeface="monospace" />
        
        <TextView
                        android:id="@+id/tvToadayMinTemp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="right|bottom"
                        android:gravity="right"
                        android:layout_row="1"
                        android:layout_column="2"
                        android:padding="5dp"
                        android:text="@string/default_min_temp"
                        android:textColor="@android:color/white"
                        android:textSize="25sp"
                        android:textStyle="bold"
                        android:typeface="monospace"
                        android:background="@drawable/blue_rectangle" />
        
        <TextView
                        android:id="@+id/tvToadayMaxTemp"
                        
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_row="1"
                        android:layout_column="2"
                        android:layout_gravity="right|top"
                        android:padding="5dp"
                        android:text="@string/default_max_temp"
                        android:textColor="@android:color/white"
                        android:textSize="25sp"
                        android:textStyle="bold"
                        android:typeface="monospace"
                        android:background="@drawable/orange_rectangle" />

                    

	</GridLayout>
        


        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            
        android:layout_marginBottom="5dp"
        android:background="@drawable/backgroud_rectangle"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
            android:columnCount="2" >
        
            <TextView
                android:layout_column="0"
                android:layout_gravity="left|center_vertical"
                android:layout_row="0"
                android:text="@string/lbl_weather_desc"
                android:textColor="@color/blue_gray"
                android:textSize="13sp"
                android:textStyle="bold"
                android:typeface="monospace"
                android:layout_marginBottom="3dp" />
            
            <TextView
                android:id="@+id/tvCurrentWeatherConditionDesc"
                android:layout_column="1"
                android:layout_gravity="right|center_vertical"
                android:layout_row="0"
                android:text="@string/default_weather_desc"
                android:textColor="@android:color/holo_red_dark"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="13sp"
                android:textStyle="bold"
                android:typeface="monospace"
                android:layout_marginBottom="3dp" />
            
            <TextView
                android:layout_column="0"
                android:layout_gravity="left|center_vertical"
                android:layout_row="1"
                android:text="@string/lbl_humidity"
                android:textColor="@color/blue_gray"
                android:textSize="13sp"
                android:textStyle="bold"
                android:typeface="monospace"
                android:layout_marginBottom="3dp" />
            
            <TextView
                android:id="@+id/tvHumidity"
                android:layout_column="1"
                android:layout_gravity="right|center_vertical"
                android:layout_row="1"
                android:text="@string/default_humidity"
                android:textSize="13sp"
                android:textStyle="bold"
                android:typeface="monospace"
                android:layout_marginBottom="3dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_gravity="left|center_vertical"
                android:layout_row="2"
                android:layout_column="0"
                android:text="@string/lbl_visibility"
                android:textColor="@color/blue_gray"
                android:textSize="13sp"
                android:textStyle="bold"
                android:typeface="monospace"
                android:layout_marginBottom="3dp" />

			<TextView
                android:id="@+id/tvVisibility"
                android:layout_column="1"
                android:layout_gravity="right|center_vertical"
                android:layout_row="2"
                android:text="@string/default_visibility"
                android:textSize="13sp"
                android:textStyle="bold"
                android:typeface="monospace"
                android:layout_marginBottom="3dp" />            

            <TextView
                android:layout_column="0"
                android:layout_gravity="left|center_vertical"
                android:layout_row="3"
                android:text="@string/lbl_wind_speed"
                android:textColor="@color/blue_gray"
                android:textSize="13sp"
                android:textStyle="bold"
                android:typeface="monospace"
                android:layout_marginBottom="3dp" />
            
            <TextView
                android:id="@+id/tvWindSpeed"
                android:layout_gravity="right|center_vertical"
                android:text="@string/default_wind_speed"
                android:textSize="13sp"
                android:textStyle="bold"
                android:layout_column="1"
                android:layout_row="3"
                android:typeface="monospace"
                android:layout_marginBottom="3dp" />
            
            <TextView
                android:layout_column="0"
                android:layout_gravity="left|center_vertical"
                android:layout_row="4"
                android:text="@string/lbl_wind_direction"
                android:textColor="@color/blue_gray"
                android:textSize="13sp"
                android:textStyle="bold"
                android:typeface="monospace"
                android:layout_marginBottom="3dp" />
            
            <TextView
                android:id="@+id/tvWindDirection"
                android:layout_column="1"
                android:layout_gravity="right|center_vertical"
                android:layout_row="4"
                android:text="@string/default_wind_direction"
                android:textSize="13sp"
                android:textStyle="bold"
                android:typeface="monospace"
                android:layout_marginBottom="3dp" />
            
            <TextView
                android:layout_column="0"
                android:layout_gravity="left|center_vertical"
                android:layout_row="5"
                android:text="@string/lbl_pressure"
                android:textColor="@color/blue_gray"
                android:textSize="13sp"
                android:textStyle="bold"
                android:typeface="monospace"
                android:layout_marginBottom="3dp" />
            
            <TextView
                android:id="@+id/tvPressure"
                android:layout_column="1"
                android:layout_gravity="right|center_vertical"
                android:layout_row="5"
                android:text="@string/default_pressure"
                android:textSize="13sp"
                android:textStyle="bold"
                android:typeface="monospace"
                android:layout_marginBottom="3dp" />
            
                        <TextView
                android:layout_column="0"
                android:layout_gravity="left|center_vertical"
                android:layout_row="6"
                android:text="@string/lbl_cloud_cover"
                android:textColor="@color/blue_gray"
                android:textSize="13sp"
                android:textStyle="bold"
                android:typeface="monospace"
                android:layout_marginBottom="3dp" />
                        
            <TextView
                android:id="@+id/tvCloudCover"
                android:layout_column="1"
                android:layout_gravity="right|center_vertical"
                android:layout_row="6"
                android:text="@string/default_cloud_cover"
                android:textSize="13sp"
                android:textStyle="bold"
                android:typeface="monospace"
                android:layout_marginBottom="3dp" />

            <TextView
                android:layout_column="0"
                android:layout_gravity="left|center_vertical"
                android:layout_row="7"
                android:text="@string/lbl_precipitation"
                android:textColor="@color/blue_gray"
                android:textSize="13sp"
                android:textStyle="bold"
                android:typeface="monospace"
                android:layout_marginBottom="3dp" />
            
            <TextView
                android:id="@+id/tvPrecipitation"
                android:layout_column="1"
                android:layout_gravity="right|center_vertical"
                android:layout_row="7"
                android:text="@string/default_precipitation"
                android:textSize="13sp"
                android:textStyle="bold"
                android:typeface="monospace"
                android:layout_marginBottom="3dp" />

            

            

        </GridLayout>

<!--     <ScrollView -->
<!--             android:layout_width="fill_parent" -->
<!--             android:layout_height="fill_parent" -->
<!--             android:orientation="vertical" -->
<!--             android:overScrollMode="never" -->
<!--             android:scrollbars="none" -->
<!--     android:background="@drawable/backgroud_rectangle" -->
<!--             > -->

<!--             <HorizontalScrollView -->
<!--                 android:layout_width="fill_parent" -->
<!--                 android:layout_height="wrap_content" -->
<!--                 android:overScrollMode="never" -->
<!--                 android:scrollbars="none" -->
<!--                 android:layout_gravity="center_vertical" > -->

                <LinearLayout
                    android:id="@+id/llFiveDayWeather"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:orientation="horizontal"
                    android:background="@drawable/backgroud_rectangle"
                    android:gravity="center"
                     >
				</LinearLayout>
<!--             </HorizontalScrollView> -->
<!--         </ScrollView> -->

</LinearLayout>